--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.63
-	loader_version=0.12.12
-
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
+loader_version=0.14.6
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
-
+mod_version=1.0.0
+maven_group=com.ccgauche
+archives_base_name=mcmachines
 # Dependencies
-	fabric_version=0.42.1+1.17
+fabric_version=0.54.0+1.18.2
